--- a/styles.css
+++ b/styles.css
@@ -218,8 +218,8 @@
 
 .desktop .image {
     position: absolute;
-    width: 172px;
-    height: 76px;
+    width: 181px;
+    height: 79px;
     top: 0;
     left: 140px;
     object-fit: cover;
@@ -236,7 +236,7 @@
 }
 
 .desktop .text-wrapper-10 {
-    left: 10px;
+    left: 60px;
     line-height: normal;
     position: absolute;
     font-family: "Inknut Antiqua-Bold", Helvetica;
@@ -247,7 +247,7 @@
 }
 
 .desktop .text-wrapper-11 {
-    left: 389px;
+    left: 440px;
     line-height: normal;
     position: absolute;
     font-family: "Inknut Antiqua-Bold", Helvetica;
@@ -258,7 +258,7 @@
 }
 
 .desktop .text-wrapper-12 {
-    left: 606px;
+    left: 660px;
     line-height: normal;
     position: absolute;
 
@@ -270,7 +270,7 @@
 }
 
 .desktop .text-wrapper-13 {
-    left: 921px;
+    left: 973px;
     line-height: 51.7px;
     white-space: nowrap;
     position: absolute;
@@ -436,7 +436,13 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
+    transition: transform .2s;
 }
+
+.desktop .text-wrapper-15:hover {
+    transform: scale(1.3);
+}
+
 
 .desktop .text-wrapper-16 {
     position: absolute;
@@ -632,7 +638,12 @@
     font-size: 20px;
     letter-spacing: 0;
     line-height: normal;
-    white-space: nowrap;
+    white-space: nowrap;    
+    transition: transform .2s;
+}
+
+.desktop .text-wrapper-24:hover {
+    transform: scale(1.3);
 }
 
 .desktop .text-wrapper-25 {
@@ -646,6 +657,11 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
+    transition: transform .2s;
+}
+
+.desktop .text-wrapper-25:hover {
+    transform: scale(1.3);
 }
 
 .desktop .line {
@@ -726,9 +742,36 @@
     color: #DFC158;
 }
 
-/* Media query for screens below 500px width */
-@media screen and (max-width: 1500px) {
+/* Media query for screens below 1000px width */
+@media screen and (max-width: 1000px) {
     body {
         width: 150%;
+    }
+}
+
+
+
+/* Media query for screens above 1500px width */
+@media screen and (min-width: 1500px) {
+    .desktop .div {
+        margin-left: 6.5rem;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .desktop .div {
+        margin-left: 15rem;
+    }
+}
+
+@media screen and (min-width: 2000px) {
+    .desktop .div {
+        margin-left: 20rem;
+    }
+}
+
+@media screen and (min-width: 2400px) {
+    .desktop .div {
+        margin-left: 35rem;
     }
 }
