--- a/form.css
+++ b/form.css
@@ -6,16 +6,13 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-body{
-  min-height: 100vh;
-  width: 100%;
-}
+
 .container{
-  width: 100%;
   background: #fff;
   border-radius: 6px;
   padding: 20px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  max-width: 100vw;
 }
 .container .content{
   display: flex;
@@ -96,7 +93,7 @@ body{
   display: inline-block;
   margin-top: 12px;
 }
-.right-side .button input[type="submit"]{
+.right-side .button button[type="submit"]{
   color: #fff;
   font-size: 18px;
   outline: none;
@@ -107,7 +104,7 @@ body{
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.button input[type="submit"]:hover{
+.button button[type="submit"]:hover{
   background: #dccb8f;;
 }
 
