--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     height: 1182px;
     position: relative;
     padding: 69px;
-    margin: 0 2.5vw;
+/*     margin: 0 2.5vw; */
 }
 
 .desktop .overlap {
