--- a/style.css
+++ b/style.css
@@ -16,10 +16,9 @@ body{
     width: 98%;
 }
 
-/*-------------------------------------------------- Banner css ------------------------------------------------------------ */
+/*-------------------------------------------------- Banner and heading css ------------------------------------------------------------ */
 
 .banner{
-    background-color: antiquewhite;
     width: 96%;
     height: 20vh;
     min-height: 100px;
@@ -45,7 +44,7 @@ body{
     margin: 15px;
     float: right;
     position: relative;
-    top: 5%;
+    top: 3px;
 }
 
 .one{
@@ -67,13 +66,13 @@ body{
     color: darkgoldenrod;
     min-height: 10%;
     position: relative;
-    top: 15%;
+    top: 18px;
 }
 
 .blackbox{
     position: relative;
-    top: -20%;
-    left: -10px;
+    top: -45%;
+    left: -3px;
     width: 100%;
     height: 45%;
     background-color: black;
@@ -84,7 +83,7 @@ body{
     justify-content: center;
     position: absolute;
     left: 32.5%;
-    top: 12%;
+    top: 14%;
     width: 35%;
 }
 
@@ -122,26 +121,61 @@ body{
     visibility: hidden;
 }
 
-@media screen and (min-width:277px) {
+.heading{
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.img-year{
+    height: 25px;
+    width: auto;
+    margin: auto;
+}
+
+.headingtext{
+    background: linear-gradient(180deg, rgb(223, 193, 88) 0%, rgb(49.94, 49.94, 49.94) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+    font-family: "Inknut";
+    font-weight: 700;
+    color: transparent;
+    font-size: 40px;
+    letter-spacing: 0;
+    line-height: normal;
+    text-align: center;
+}
+
+@media screen and (min-width:283px) {
     .blackbox{
-        top: -3%;
+        top: -9%;
     }
 }
 
-@media screen and (min-width:377px) {
+@media screen and (min-width:381px) {
     .blackbox{
-        top: 15%;
+        top: 10%;
     }
 }
 
 @media screen and (min-width:420px) {
 
+
+    .oi{
+        top: 3%;
+    }
     .o-i{
         font-size: xx-large;
     }
 
     .o-f{
         font-size: xx-large;
+    }
+
+    .oiof{
+        top: 12%;
     }
 }
 
@@ -150,8 +184,8 @@ body{
         visibility: visible;
         font-size: 0.5rem;
         position: relative;
-        bottom: 30%;
-        left: 10%;
+        bottom: 19%;
+        left: 9%;
     }
 
     .textright{
@@ -171,12 +205,16 @@ body{
     .wcl-logo{
         visibility: visible;
     }
+
+    .img-year{
+        height: 35px;
+    }
 }
 
 @media screen and (min-width:770px) {
     .textleft{
-        bottom: 60px;
-        left: 10%;
+        bottom: 49px;
+        left: 9%;
     }
     
     .wdf-img{
@@ -192,8 +230,8 @@ body{
 
 @media screen and (min-width:1000px) {
     .textleft{
-        bottom: 60px;
-        left: 10%;
+        bottom: 59px;
+        left: 12%;
         font-size: small;
     }
     
@@ -207,6 +245,9 @@ body{
         font-size: small;
     }
 
+    .img-year{
+        height: 45px;
+    }
 }
 
 @media screen and (min-width:1100px) {
@@ -230,10 +271,13 @@ body{
         font-size: medium;
     }
 
+    .img-year{
+        height: 55px;
+    }
+
 }
 
-/*-------------------------------------------------- Banner css end ------------------------------------------------------------ */
-
+/*-------------------------------------------------- Banner css and heading end ------------------------------------------------------------ */
 
 /*-------------------------------------------------- table and form css ------------------------------------------------------------ */
 
