--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ body{
 .oi{
     display: flex;
     flex-direction:row;
-    margin: 15px;
+    margin: 13px;
     float: right;
     position: relative;
     top: 3px;
+    font-weight: bold;
 }
 
 .one{
@@ -67,11 +68,12 @@ body{
     min-height: 10%;
     position: relative;
     top: 18px;
+    font-weight: bold;
 }
 
 .blackbox{
     position: relative;
-    top: -45%;
+    top: -30%;
     left: -3px;
     width: 100%;
     height: 45%;
@@ -89,12 +91,14 @@ body{
 
 .o-i{
     font-size: larger;
+    font-weight: bolder;
     position: relative;
-    margin: 5px;
+    margin: 4px;
 }
 
 .o-f{
     font-size: large;
+    font-weight: bolder;
     color: white;
     position: relative;
     margin: 5px;
@@ -156,7 +160,11 @@ body{
 
 @media screen and (min-width:381px) {
     .blackbox{
-        top: 10%;
+        top: 14%;
+    }
+    
+    .o-i{
+        margin: 5px;
     }
 }
 
@@ -184,7 +192,7 @@ body{
         visibility: visible;
         font-size: 0.5rem;
         position: relative;
-        bottom: 19%;
+        bottom: -4px;
         left: 9%;
     }
 
@@ -213,7 +221,7 @@ body{
 
 @media screen and (min-width:770px) {
     .textleft{
-        bottom: 49px;
+        bottom: 0px;
         left: 9%;
     }
     
@@ -230,7 +238,7 @@ body{
 
 @media screen and (min-width:1000px) {
     .textleft{
-        bottom: 59px;
+        bottom: 12px;
         left: 12%;
         font-size: small;
     }
@@ -252,7 +260,7 @@ body{
 
 @media screen and (min-width:1100px) {
     .textleft{
-        bottom: 100px;
+        bottom: 23px;
         left: 92px;
         font-size: medium;
     }
@@ -267,7 +275,7 @@ body{
     }
 
     .textright{
-        padding-left: 60%;
+        padding-left: 64%;
         font-size: medium;
     }
 
